--- a/app/src/main/res/layout/edit_order_screen.xml
+++ b/app/src/main/res/layout/edit_order_screen.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:text="place you order:"
+        android:text="Edit your order:"
         android:textSize="20dp"
         app:layout_constraintLeft_toLeftOf="@id/title"
         app:layout_constraintTop_toBottomOf="@+id/title" />
@@ -125,7 +125,7 @@
         android:layout_marginStart="90dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/send_button"
+        android:id="@+id/update_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
@@ -134,5 +134,6 @@
         app:layout_constraintTop_toBottomOf="@+id/enter_comment"
         android:layout_marginStart="10dp"
         app:srcCompat="@android:drawable/ic_menu_send" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
