a version where a save all fields on sp

--- a/app/src/main/res/layout/edit_order_screen.xml
+++ b/app/src/main/res/layout/edit_order_screen.xml
@@ -88,7 +88,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/customer_name"
         android:layout_marginStart="90dp" />
 
-    <NumberPicker
+    <EditText
         android:id="@+id/update_pickles"
         android:layout_width="62dp"
         android:layout_height="28dp"
