--- a/app/src/main/res/layout/new_order_screen.xml
+++ b/app/src/main/res/layout/new_order_screen.xml
@@ -90,8 +90,9 @@
 
     <EditText
         android:id="@+id/enter_pickles"
-        android:layout_width="62dp"
-        android:layout_height="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="some pickles?"
         app:layout_constraintBottom_toBottomOf="@id/pickles"
         app:layout_constraintLeft_toLeftOf="@id/pickles"
         android:layout_marginStart="90dp"
@@ -132,6 +133,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enter_comment"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="10dp"
         app:srcCompat="@android:drawable/ic_menu_send" />
 
